--- a/sekcja-4-zadanie-2/zadanie-start.html
+++ b/sekcja-4-zadanie-2/zadanie-start.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta http-equiv="X-UA-Compatible" content="ie=edge">
- <title>Zadanie dla Ciebie - Skroll + zmiana wielkości prostokąta</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Zadanie dla Ciebie - Skroll + zmiana wielkości prostokąta</title>
 </head>
 
 <body>
- <script>
 
- </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
