--- a/s15-jednoreki-bandyta-gra/index.html
+++ b/s15-jednoreki-bandyta-gra/index.html
@@ -11,7 +11,34 @@
 
 <body>
 
+    <div class="wrap">
 
+        <h1>Jednoręki bandyta</h1>
+
+        <section class="game">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+        </section>
+        <section class="play">
+            <input type="number" placeholder="wpisz stawkę" id="bid">
+            <button id="start">Zakręć!</button>
+        </section>
+        <section class="panel">
+            TWOJE AKTUALNE ŚRODKI: <span class="wallet"></span>
+        </section>
+        <section class="score">
+            <span class="result"></span>
+            Za tobą <span class="number"></span> gier, w tym <span class="win"></span> wygranych i <span
+                class="lose"></span> przegranych.
+        </section>
+
+    </div>
+
+    <script src="Draw.js"></script>
+    <script src="Statistics.js"></script>
+    <script src="Wallet.js"></script>
+    <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
 
