--- a/s15-jednoreki-bandyta-gra/index.html
+++ b/s15-jednoreki-bandyta-gra/index.html
@@ -38,6 +38,7 @@
     <script src="Draw.js"></script>
     <script src="Statistics.js"></script>
     <script src="Wallet.js"></script>
+    <script src="Result.js"></script>
     <script src="Game.js"></script>
     <script src="main.js"></script>
 </body>
